@@ -6,6 +6,6 @@ EBUILD twisted-names-12.3.0.ebuild 770 SHA256 479d005613bc42bf60a2d763aa88a8565e
 EBUILD twisted-names-13.0.0-r1.ebuild 658 SHA256 601fddb0207bb570cffa10fcd9f73a1e7a94a64590420270acf0fd2c09badc49 SHA512 ddc5faf620af569fa5de43001c1b1cb76002487e16180253b41a067e4bc4c94a0c369d277725ca56a2f4a473f304ed69aefdf1d5cd77e4cf13ae5cd69f2114b7 WHIRLPOOL fe14bb80bd97932e7ec95cbbd1554a8b8ac8a8f3059910e7d2944f5e5828e8a802d54ebae1a1f26bef059159d95f0940dd0a3ceb1d54a1baba2d96686cecbe54
 EBUILD twisted-names-13.0.0.ebuild 781 SHA256 123890100ce4bffbd60c77df5923cfbac1a8b3f7d39f3f707940ca8dd604b0cc SHA512 ee2a669e74072a92324d92c17d1976944b93100e0e037786190ccb4a1d5b32521bf483659e5b0d3e061d263e8925f4923f08a852aa17f98621db29dfcb0363b3 WHIRLPOOL 80a9228cacc94172c20bd92601529b5603d9ad936bd3e74714a5887d86f9b06d75225feef87a6cb333b371413ef5b9f88106413a1ec565324e9413e3dfc15282
 EBUILD twisted-names-13.2.0.ebuild 656 SHA256 1c98dcc7bfc3e18bbe5aa110a04bf5128bd80a15365e00457beb42904c140e2f SHA512 8518a2ea6ad826d02958c4e1009a4e7f27539d076816fada97c24df702e7bdf8aae94a4d025733084c9ba63ab6717501df128cefe9e1bc78ac874fd532fcf92a WHIRLPOOL 98525bb8605c7a94871219a88f038f5526401cdf3aa9f30075e1a120bcb1ded6f21420e440bdcac1c1ab390088f8ee20c033a901c4d62675f4b148dd7a43c8fb
-EBUILD twisted-names-14.0.0.ebuild 656 SHA256 21409e46cc620007f53f7bdb65f335add713f8f830feca55892d551b4c1a5951 SHA512 06ff23bf2bd400946ed4f343b003eca30ec3f8471464068dac00e50fb1b59930203c10631818e6ff8deaca1db2c54b6d55576e35529ed261dc0ecc1136f229b5 WHIRLPOOL 49f00f3879669bb49ab10cb286dfc1c3577656bd89ffa4a7746576b11c96575a20a53ea18d022c1b2a541020dac6b0749d67651f45a018066ca9181144144226
-MISC ChangeLog 11335 SHA256 089ece19b6e87a5074ed2d182f6c31f099c7005837d834df9d32f6bd9de52cd5 SHA512 1b8818415d1d50d01b7d23b48b2e9d59ec7e1d0b9636fb6b61a1c5a705a139d462d124f75f40e0cb6ec5e65ae02fce4ddf80175e673adabfdad742938c4271ed WHIRLPOOL 3334023758eb7f834870d7c0fe8d78c1f416239eed81e9dffee78a1a5720c4ceec928146fdc34a267b7c80fb77d9b42756816f8aafcc2798dbb25cebe7bfb34a
+EBUILD twisted-names-14.0.0.ebuild 645 SHA256 d9f1e4d6a9d37486e254d73e02e25cfa5eee98783fd0ef5ef2e22efecddeeb1e SHA512 1db80cc17a0307e54429dfa2db907385e8e1db1c5490974859ede5926fb4eb3b9379295104bb5ee6d373f48bf0d99911e159375d7d6649a0cbcf71f0993658c9 WHIRLPOOL 771ae2eda4c6dadc0eed1ec5d64a1c05dd9079e084cd91610ba6d280d0f4b42e17c81acd195f1db343f8145605817f9152cfe6f734953459b7bcea4ee3f56933
+MISC ChangeLog 11492 SHA256 478adfd54ff715a9809f43e5ab2b84cd3f59b1d2dd8d03a39b2575f1193ada3a SHA512 ca461816bad79ac873b09d092290873f336f35a8859cf0944c1badb00100ab81a8fdce1c128bec39551565e5e8df25818afb458b7fa0404bf096eb55b837f74d WHIRLPOOL c55143c59414f122caea8db1646385423131c8c8051221baacc4e6e6bdbd74bc8cbf70abcfce83a8bc67fc3885b565feefea84ffb0e35921ca3945a45dfe8a07
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
