@@ -7,6 +7,6 @@ EBUILD twisted-words-12.3.0.ebuild 731 SHA256 fc7e3876b427e1aa433813485646b04e77
 EBUILD twisted-words-13.0.0-r1.ebuild 621 SHA256 e46bd07af960167c0097b36bfe13b386c4825719cdbf1b76e6c05da6a430d5c1 SHA512 7719066b0e9d82a6f783ca5d930c98577779efa34d5acf6fb381251a8ffe1ffee0e9793d231e743e3b93d27ddc12d3c0efb97ca20931a4e239b6ce674a98e68a WHIRLPOOL cfdd80aa559e74cb44b90653b31f898907a0b563ae8a73be1d7b06454f4e91c42a31706c4138fe70b498b5441a94bbad0ba3587c7f7fe0238defeedef9b1f677
 EBUILD twisted-words-13.0.0.ebuild 742 SHA256 cde153b334765b5ecbbfa2ca8c2f6632ac59d39c2b0d1d85f0493f52d6e73056 SHA512 788c9fcf70c783e1b83b6a0b8cb88da20adcb610e64fe8b5725573102cf19de75d4f369e1ced0a12cc31400462bf26c5e04451e9549cd4fe398a74e6fba291aa WHIRLPOOL 7bbbacb25fb275fae22c080ee819999700d83061e6350ca9cac8c1dede6c46e8a48d278cae4ab8d3cc2c9fc0d25423ee1472b3f0e8962926c9de769c27387c59
 EBUILD twisted-words-13.2.0.ebuild 619 SHA256 312d6a65f9db78b6900b8e1d422d11dbe1875b0139777dada887dd0fd20bd0fa SHA512 b6c1fc698380714c21ee36f0cc25b45d409546a6da683c73d027fd604fc5c171450ad18f884ae37a6e51fb6b526f9a5f852ba7fc150c3cf582d52e4af8b181c5 WHIRLPOOL 44225d144d4ad474972892a44faa30e20cb08698edca6a339b55f024e54a4dbfead38465bd01f9dd7521c9bede6c0a2a5eee94b0e21d3db83a37ccf225e0ee5d
-EBUILD twisted-words-14.0.0.ebuild 619 SHA256 07238a55a5164eeb1c5c9e516e128202a653112551ce972a47198690065bc1bd SHA512 12ba6de25da984926652c3a08a4d9abda716482305236bddf17e7c6c546de52114311330cc8bb1d66127039da48d96647b69c043bbd8b7428b525c4017865536 WHIRLPOOL 759021f0febb9e4e0518a108fdf180c9f7ab5b687f4017cb6b8828511200f55311173eed32584a88da0684b6ed748da1f59dc9f55cfc913a74b92fcbe912c4f3
-MISC ChangeLog 12772 SHA256 f4d08f5bfac9c7c534dc22d86144a916c2273fd2f970e903183d2bcd5bae7c0e SHA512 4957ddeb1a66479abd1c1b9d4a80b576dd7cd7fa4e38b8e1ec3cd6bf773b1f0f50db0dd430e7f837f274323948479bdcfec370e645bc5a992760d62314beafbb WHIRLPOOL 77adb677394a0e5796e399d539eb4e6ab6d4bbf6d709ed08e2c039c882edbb6f497342db26aa93680cb5ce5d6de8697cd6189403a8e8582d0b6845d0c712e6ee
+EBUILD twisted-words-14.0.0.ebuild 608 SHA256 9cfae323cec4d5ee9c6d26b046257f171e8c5b43ec0e2659b7b9bae201130ca0 SHA512 7243d20f1b2667df5c3a8e2f5ecc491664264b23795e3be13a0b83b993e6b17024a83086d57a1703ff80280813c4490edf8be3499e0b812d29377da9d49e40ec WHIRLPOOL 324ca18cd8e91c2b0e4224b61e958742586f8535ec311d28bdff2f730f0ad5669f8ab63df3a62275e3682d9f29f02d750179926a3a7d3aa8c939da2424a2d2cd
+MISC ChangeLog 12929 SHA256 7c3b785bf9d453021a9196d53289040be849dfe0b3ab2ab9884ae4ebd81c502f SHA512 cc610f4bda995011a1b4232096b5fc468df7ce6a4082bed67ba52e7695b4bf9500429d0ad4c010398e5dfd96b080707e8e93f798d831943a1e74ab266b829cf3 WHIRLPOOL c5d4c7c4ef8465c6b7c42130d3fd0cb822ed86638f14e2729e23336180355771094faaf69349cb8edc4ae97cc37cd7e56e1915b69b6fc7e4ec51f71ca75d031b
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
