@@ -1,4 +1,4 @@
 DIST pdf-core-0.2.5.gem 40960 SHA256 c722b89f261b381235b8e322a1d8a7fe7fcdd88e517e0da13ffce7ef07cc7c1d SHA512 61f075a1e411b448a076ddfff6f0a9e4f9382ed96d3f0350695789e8a4476954399d948db768a9c2294f6181142869bfa48e7d15bb6f4c458e19b6fff0fd1f19 WHIRLPOOL 90932ca0f9dd36434c56d125649a4b3ff23d2f734953219ae07c873d3daa48cb31a21114eb535e8c3def9577a4454e31b6f458d87c6711711f94bc7f0e4d0d5d
-EBUILD pdf-core-0.2.5.ebuild 704 SHA256 b400d14b8fabd943b94cfa2833fbef60cf36fb166a5a977e228877a44b4df017 SHA512 b58277dea64b28c990b325ac300d99e8463be78faac55fe3f0287336fd180bd594b7b3350141e6b3dd8f7535ff82681a5cb1d34d2c437b5f5382cbb97eacecca WHIRLPOOL 320c2ee2d5734b2a9649dc085dfae30d6a2854f600393d5c2d83d02d7da758f96d2bd19bf570385984e934873040b9c30269171f945486beed71c9a0eb0e5437
-MISC ChangeLog 344 SHA256 9e39dbc6d3c5c279f8d6e76067f1322d63c8e67b06f587b54579b01683a7e007 SHA512 8c55f8515fc248c2a943b66a1d69a3fa90f6105e28048110860581324d7474844b7aec59c6ddfe14f9e2595ba0a073459ee3db1ee35f8bf0ff5fee437a3e6030 WHIRLPOOL 95041133e452b4239fa0180eec42a91e38ab679516221ac46bcb50f44cf1d1e53add557921e49730c111fc69986f1164d64233881f2a3791137c5ea129f66bbd
+EBUILD pdf-core-0.2.5.ebuild 670 SHA256 2003cccbcb6f49ce9275bc3fb963aeeb92cc6d16ff2840f82682decdac577e55 SHA512 daae2869d02e41da962351fdfe09c50511153d5cc7986bfc04558a267d797572a4ade5cda07bc07315d9d6ed45b37b10bde68548cd064aba81c10d9134af08b9 WHIRLPOOL 943bde48caea5472226b82b03ec3a5c0f743c90aa41f2eee14a3d74229b540697efdf122546784459117b0faed8e5bd0751863a4b5f71cc698f9060545c604ad
+MISC ChangeLog 439 SHA256 5a0dd2a6fa36a07ea18bbb8fcc9b74a8bda6a5245585f1dcb9c2ad867da2431d SHA512 70979c5f7b212da7e70ac25f679c0ccde3bafb062eb5ff5b26f83141eb86ce8cef98e568ba2f9f4491c99e6088867971b9cf81b97f4a84379f319f6e43f1fea1 WHIRLPOOL 1caa8e9878587307692940640197fb0e984a797870c72409e46d002000e01a2f03c74a8918bf71f9dc61bfef783ca4236ca365a6580bb072a84f649e568d2819
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
