@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-core/pdf-core-0.2.5.ebuild,v 1.1 2014/05/15 00:13:23 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-core/pdf-core-0.2.5.ebuild,v 1.2 2014/05/26 02:25:11 mrueg Exp $
 
 EAPI=5
 
@@ -9,7 +9,6 @@ USE_RUBY="ruby19 ruby20"
 RUBY_FAKEGEM_RECIPE_TEST="rspec"
 
 RUBY_FAKEGEM_TASK_DOC="rdoc"
-RUBY_FAKEGEM_EXTRADOC="README.md"
 
 inherit ruby-fakegem
 
