@@ -4,11 +4,11 @@ DESCRIPTION=Twisted Words contains Instant Messaging implementations.
 EAPI=5
 HOMEPAGE=http://www.twistedmatrix.com/
 IUSE=python_targets_python2_6 python_targets_python2_7
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
 LICENSE=MIT
 RDEPEND==dev-python/twisted-core-14.0*[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] =dev-python/twisted-web-14.0*[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
 SRC_URI=http://twistedmatrix.com/Releases/Words/14.0/TwistedWords-14.0.0.tar.bz2
 _eclasses_=distutils-r1	0ffe72d093023ff4f69e4ceaf6f63e4e	eutils	025442f2eecab39ad0b4e541b6e142af	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	1356c4bb8f56765cff4b74c0128d2a4f	python-utils-r1	e544c60078c7fa0939091b4c33e27450	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	twisted-r1	8e3123a6498c5da6dd9d8135b3655efd	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=9b18c84c30b2dd9f9cdba9c097ccccd6
+_md5_=4583a78e2ecc51bffada45e34bf1d8c4
