@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/pdf-core
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-core/ChangeLog,v 1.1 2014/05/15 00:13:23 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-core/ChangeLog,v 1.2 2014/05/26 02:25:11 mrueg Exp $
+
+  26 May 2014; Manuel Rüger <mrueg@gentoo.org> pdf-core-0.2.5.ebuild:
+  No README.md in gem.
 
 *pdf-core-0.2.5 (15 May 2014)
 
