@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/twisted-names
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-names/ChangeLog,v 1.86 2014/05/20 07:05:56 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-names/ChangeLog,v 1.87 2014/05/26 02:02:14 patrick Exp $
+
+  26 May 2014; Patrick Lauer <patrick@gentoo.org> twisted-names-14.0.0.ebuild:
+  Temporarily drop arm and hppa keywords until twisted-core catches up again
 
 *twisted-names-14.0.0 (20 May 2014)
 
